# tonic-richer-error

./: Cargo.toml  README.md
examples/: Cargo.toml  README.md  build.rs  client.rs  richer_status.rs  server.rs  with_struct.rs  with_vec.rs
examples/badreq/: client.rs  client_vec.rs  server.rs  server_vec.rs
examples/pb/: schedule.rs  schedule.tonic.rs
examples/proto/schedule/: schedule.proto
examples/src/badreq/: client.rs  client_vec.rs  server.rs  server_vec.rs
examples/src/richer-error/: client.rs  client_vec.rs  server.rs  server_vec.rs
src/: bad_request.rs  debug_info.rs  error_detail.rs  error_details.rs  error_details_vec.rs  error_info.rs  lib.rs  quota_failure.rs  retry_info.rs
src/error_detail/: bad_request.rs  debug_info.rs  error_info.rs  help.rs  loc_message.rs  prec_failure.rs  quota_failure.rs  request_info.rs  resource_info.rs  retry_info.rs
src/pb/: google.rpc.rs
tonic-richer-error/: Cargo.toml  LICENSE  build.rs
tonic-richer-error/src/: error_details.rs  error_details_vec.rs  lib.rs
tonic-richer-error/src/error_detail/: help.rs  quota_failure.rs  request_info.rs  retry_info.rs
tonic-richer-error/src/std_messages/: bad_request.rs  debug_info.rs  error_info.rs  help.rs  loc_message.rs  prec_failure.rs  quota_failure.rs  request_info.rs  resource_info.rs  retry_info.rs
