[package]
name = "tonic-richer-error"
authors = ["Rafael Lemos <flemos.rafael.dev@gmail.com>"]
categories = ["web-programming", "network-programming", "asynchronous"]
description = """
Traits and structs for implementation of the gRPC richer error model with tonic
"""
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.7.2", features = ["compression"] }
prost = "0.10"
prost-types = "0.10.1"