[package]
name = "examples"
authors = ["Rafael Lemos <flemos.rafael.dev@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
readme = "./README.md"
version = "0.1.0"

[[bin]]
name = "badreq-server"
path = "src/badreq/server.rs"

[[bin]]
name = "badreq-client"
path = "src/badreq/client.rs"

[[bin]]
name = "badreq-server-vec"
path = "src/badreq/server_vec.rs"

[[bin]]
name = "badreq-client-vec"
path = "src/badreq/client_vec.rs"

[dependencies]
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.7", features = ["compression"] }
tonic-richer-error = { path = "../tonic-richer-error" }

[build-dependencies]
tonic-build = { version = "0.7", features = ["compression"] }
