[package]
name = "examples"
authors = ["Rafael Lemos <flemos.rafael.dev@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
readme = "./README.md"
version = "0.1.0"

[[bin]]
name = "richer-error-client"
path = "src/richer-error/client.rs"

[[bin]]
name = "richer-error-server"
path = "src/richer-error/server.rs"

[[bin]]
name = "richer-error-client-vec"
path = "src/richer-error/client_vec.rs"

[[bin]]
name = "richer-error-server-vec"
path = "src/richer-error/server_vec.rs"

[dependencies]
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.7", features = ["compression"] }
tonic-richer-error = { path = "../tonic-richer-error" }

[build-dependencies]
tonic-build = { version = "0.7", features = ["compression"] }
