[package]
name = "tonic-richer-error"
authors = ["Rafael Lemos <flemos.rafael.dev@gmail.com>"]
categories = ["web-programming", "network-programming"]
description = """
Assets for implementation of the gRPC Richer Error Model with tonic.
"""
edition = "2021"
homepage = "https://github.com/flemosr/tonic-richer-error"
keywords = ["rpc", "grpc", "async", "error", "grpc-error"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/flemosr/tonic-richer-error"
version = "0.2.1"

[dependencies]
tonic = "0.7"
prost = "0.10"
prost-types = "0.10.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.7", features = ["compression"] }
tonic-build = "0.7"

[build-dependencies]
prost-build = "0.10"