[package]
name = "tonic-richer-error"
authors = ["Rafael Lemos <flemos.rafael.dev@gmail.com>"]
categories = ["web-programming", "network-programming"]
description = """
Assets for implementation of the gRPC Richer Error Model with tonic.
"""
edition = "2021"
homepage = "https://github.com/flemosr/tonic-richer-error"
keywords = ["rpc", "grpc", "async", "error", "grpc-error"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/flemosr/tonic-richer-error"
version = "0.3.1"

[dependencies]
prost = { version = "0.11", default-features = false }
prost-types = "0.11"
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost"] }


[build-dependencies]
prost-build = "0.11"
